updated index and resources pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
 
+
+<style>
+    .rounded-circle {
+        object-fit: cover;
+    }
+</style>
+
 <head>
     <script src="https://getbootstrap.com/docs/5.3/assets/js/color-modes.js"></script>
     <meta charset="utf-8">
@@ -172,9 +179,10 @@
                     data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button><button
                     type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button></div>
             <div class="carousel-inner">
-                <div class="carousel-item active"><svg class="bd-placeholder-img" width="100%" height="100%"
-                        xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice"
-                        focusable="false">
+                <div class="carousel-item active"><img 
+                    src="https://media.istockphoto.com/id/1413790486/photo/abstract-dark-blue-background-silk-satin-navy-blue-color-elegant-background.jpg?s=612x612&w=0&k=20&c=DoU92DzLD5m4wynhz06GxRFM0syakHGsBgaLsI1ek-c=""
+                    class="bd-placeholder-img w-100" 
+                    alt="Slide 1 background">
                         <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
                     </svg>
                     <div class="container">
@@ -185,11 +193,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item"><svg class="bd-placeholder-img" width="100%" height="100%"
-                        xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice"
-                        focusable="false">
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
-                    </svg>
+                <div class="carousel-item"><img 
+                    src="https://media.istockphoto.com/id/1413790486/photo/abstract-dark-blue-background-silk-satin-navy-blue-color-elegant-background.jpg?s=612x612&w=0&k=20&c=DoU92DzLD5m4wynhz06GxRFM0syakHGsBgaLsI1ek-c=""
+                    class="bd-placeholder-img w-100" 
+                    alt="Slide 1 background">
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>Human Trafficking is the second most profitable illegal industry in the US.</h1>
@@ -198,9 +205,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item"><svg class="bd-placeholder-img" width="100%" height="100%"
-                        xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice"
-                        focusable="false">
+                <div class="carousel-item"><img 
+                    src="https://media.istockphoto.com/id/1413790486/photo/abstract-dark-blue-background-silk-satin-navy-blue-color-elegant-background.jpg?s=612x612&w=0&k=20&c=DoU92DzLD5m4wynhz06GxRFM0syakHGsBgaLsI1ek-c=""
+                    class="bd-placeholder-img w-100" 
+                    alt="Slide 1 background">
+
                         <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
                     </svg>
                     <div class="container">
@@ -225,9 +234,7 @@
         </div>
         <div class="container marketing">
             <div class="row">
-                <div class="col-lg-4"><svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                <div class="col-lg-4"><img src="https://t3.ftcdn.net/jpg/01/66/95/66/360_F_166956685_tcsnZWJqDZcAfOdVlCqAeQXH3DnDiWQR.jpg" class="rounded-circle" width="140" height="140" alt="Parent icon">
                         <title>Placeholder</title>
                         <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
                     </svg>
@@ -235,9 +242,7 @@
                     <p>Suppose you're a parent to a child curious about the internet. Can you keep them safe from online predators? Play the game to find out! </p>
                     <p><a class="btn btn-secondary" href="parent.html">Play the game! &raquo;</a></p>
                 </div>
-                <div class="col-lg-4"><svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                <div class="col-lg-4"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjuIYyK5N4RNo6cK4CU6A_fgdn-ZoOtX3v-w&s" class="rounded-circle" width="140" height="140" alt="Child icon">
                         <title>Placeholder</title>
                         <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
                     </svg>
@@ -245,9 +250,7 @@
                     <p>Suppose you're a child ready to explore the internet. Can you make smart decisions about who to trust? Play the game to find out!</p>
                     <p><a class="btn btn-secondary" href="child.html">Play the game! &raquo;</a></p>
                 </div>
-                <div class="col-lg-4"><svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                <div class="col-lg-4"><img src="https://static.vecteezy.com/system/resources/previews/055/572/562/non_2x/a-cartoon-teacher-standing-in-front-of-a-blackboard-white-background-free-vector.jpg" class="rounded-circle" width="140" height="140" alt="Teacher icon">
                         <title>Placeholder</title>
                         <rect width="100%" height="100%" fill="var(--bs-secondary-color)" />
                     </svg>
@@ -261,48 +264,43 @@
                 <div class="col-md-7">
                     <h2 class="featurette-heading fw-normal lh-1">Want to learn more about online safety? <span
                             class="text-body-secondary">Visit ND's data viz website</span></h2>
-                    <p class="lead">Find mind blowing statistics and educate your friends and family </p>
+                    <p class="lead">Click the image to find mind blowing statistics and educate your friends and family </p>
                 </div>
-                <div class="col-md-5"><svg
-                        class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                        height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-bg)" /><text x="50%" y="50%"
-                            fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
-                    </svg></div>
+                <div class="col-md-5"><a href="resources.html"><img 
+                    src="https://media.istockphoto.com/id/1841210733/vector/woman-holding-digital-security-shield-with-padlock-symbol-for-cyber-security-concept.jpg?s=612x612&w=0&k=20&c=QkOtAaUULQ0aGDnxrWon6aaym3vcM1igtYLZ_XrX_Og=" 
+                    class="featurette-image img-fluid mx-auto" 
+                    width="500" 
+                    height="500" 
+                    alt="Cybersecurity illustration"></a>
+                </div>
             </div>
             <hr class="featurette-divider">
             <div class="row featurette">
                 <div class="col-md-7 order-md-2">
                     <h2 class="featurette-heading fw-normal lh-1">Looking for resources in online safety? <span
                             class="text-body-secondary">check out our resource page</span></h2>
-                    <p class="lead">We've linked scholarly articles and trusted hotlines to help anyone in danger of online predators</p>
+                    <p class="lead">Click the image to find scholarly articles and trusted hotlines to help anyone in danger of online predators</p>
                 </div>
-                <div class="col-md-5 order-md-1"><svg
-                        class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                        height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-bg)" /><text x="50%" y="50%"
-                            fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
-                    </svg></div>
+                <div class="col-md-5 order-md-1"><a href="resources.html"><img 
+                    src="https://media.istockphoto.com/id/2133994194/vector/teenager-character-in-a-headset-navigates-computer-embodying-web-safety-through-secure.jpg?s=612x612&w=0&k=20&c=nIGEShAFOS32Ms9jMClbXCnkOWvbNjiRAI5xnj6Zo-s=" 
+                    class="featurette-image img-fluid mx-auto" 
+                    width="500" 
+                    height="500" 
+                    alt="Cybersecurity illustration"></a></div>
             </div>
             <hr class="featurette-divider">
             <div class="row featurette">
                 <div class="col-md-7">
                     <h2 class="featurette-heading fw-normal lh-1">Want to donate to the cause? <span
                             class="text-body-secondary">visit our website</span></h2>
-                    <p class="lead">Online safety is important for everyone. Help us keep the children safe.</p>
+                    <p class="lead">Online safety is important for everyone. Click the image to help us keep the children safe.</p>
                 </div>
-                <div class="col-md-5"><svg
-                        class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                        height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-bg)" /><text x="50%" y="50%"
-                            fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
-                    </svg></div>
+                <div class="col-md-5"><a href="resources.html"><img 
+                    src="https://media.istockphoto.com/id/1470259864/vector/vector-illustration-isolated-on-white-background.jpg?s=612x612&w=0&k=20&c=mkL_g8wEjIPeKz_YaykzJjBKGgp8dlO9aYJ0YJrZtZs=""
+                    class="featurette-image img-fluid mx-auto" 
+                    width="500" 
+                    height="500" 
+                    alt="Cybersecurity illustration"></a></div>
             </div>
             <hr class="featurette-divider">
         </div>
