--- a/resources.html
+++ b/resources.html
@@ -100,7 +100,7 @@
         }
 
         .hero-section {
-            background-color: #495057;
+            background-color: hsl(240, 71%, 44%);
             color: white;
             padding: 80px 0 60px 0;
             margin-top: 56px;
@@ -119,19 +119,19 @@
         }
 
         .hotline-card {
-            border-left: 4px solid #6c757d;
+            border-left: 4px solid hsl(240, 71%, 44%);
         }
 
         .article-card {
-            border-left: 4px solid #6c757d;
+            border-left: 4px solid hsl(240, 71%, 44%);
         }
 
         .website-card {
-            border-left: 4px solid #6c757d;
+            border-left: 4px solid hsl(240, 71%, 44%);
         }
 
         .case-study-card {
-            border-left: 4px solid #6c757d;
+            border-left: 4px solid hsl(240, 71%, 44%);
         }
 
         .section-title {
@@ -251,7 +251,7 @@
                             <h5 class="card-title fw-bold">National Human Trafficking Hotline</h5>
                             <h3 class="my-3 text-dark">1-888-373-7888</h3>
                             <p class="card-text text-muted">Available 24/7 in multiple languages. Text "HELP" to 233733.</p>
-                            <a href="#" class="btn btn-dark">Learn More</a>
+                            <a href="https://humantraffickinghotline.org/en" class="btn btn-dark">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -262,7 +262,7 @@
                             <h5 class="card-title fw-bold">National Center for Missing & Exploited Children</h5>
                             <h3 class="my-3 text-dark">1-800-843-5678</h3>
                             <p class="card-text text-muted">Report child sexual exploitation and missing children 24/7.</p>
-                            <a href="#" class="btn btn-dark">Learn More</a>
+                            <a href="https://www.missingkids.org/home" class="btn btn-dark">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -273,7 +273,7 @@
                             <h5 class="card-title fw-bold">Cyber Tipline</h5>
                             <h3 class="my-3 text-dark">Report Online</h3>
                             <p class="card-text text-muted">Report online child sexual exploitation to CyberTipline.</p>
-                            <a href="#" class="btn btn-dark">Report Now</a>
+                            <a href="https://report.cybertip.org/" class="btn btn-dark">Report Now</a>
                         </div>
                     </div>
                 </div>
